# home-ops

./: .envrc  .gitignore  .mise.toml  .sops.yaml  .tool-versions  404.html  README.md  flake.nix  index.html  justfile  kubeconfig.tpl  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/: renovate.json5
.github/renovate/: autoMerge.json5
.github/workflows/: e2e.yaml  flux-local.yaml  gh-pages.yaml  label-sync.yaml  labeler.yaml  release.yaml
bootstrap/: helmfile.yaml
docs/: index.md
docs/faq/: placeholder.md
faq/placeholder/: index.html
kubernetes/: mod.just
kubernetes/apps/auth/: kustomization.yaml
kubernetes/apps/database/: kustomization.yaml
kubernetes/apps/dev/: kustomization.yaml
kubernetes/apps/flux-system/: kustomization.yaml
kubernetes/apps/home/: kustomization.yaml
kubernetes/apps/kafka/: kustomization.yaml  namespace.yaml
kubernetes/apps/kube-system/: kustomization.yaml
kubernetes/apps/longhorn-system/: kustomization.yaml
kubernetes/apps/media/: cronjob-stale-handle.yaml  kustomization.yaml  namespace.yaml  nfs-pvc.yaml  restart-pods-with-stale-nfs.yaml
kubernetes/apps/minio/: kustomization.yaml  namespace.yaml
kubernetes/bootstrap/: README.md  helmfile.yaml
kubernetes/flux/: apps.yaml
kubernetes/talos/: talconfig.yaml
quickstart/setup/: index.html
scripts/: bootstrap-apps.sh  scaffold-new-app.sh
search/: search_index.json
talos/: talconfig.yaml  talenv.yaml  talsecret.sops.yaml
talos/clusterconfig/: .gitignore
terraform/authentik/: .terraform.lock.hcl  applications.tf  locals.tf  main.tf  scopes.tf  variables.tf
(+545 files in other folders)
