[tool.poetry]
name = "home-ops"
version = "0.1.0"
description = ""
authors = ["Oliver Tosky <olivertosky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^9.1.5"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
