[tool.poetry]
name = "home-ops"
version = "0.1.0"
description = ""
authors = ["Oliver Tosky <olivertosky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-qbittorrent = "^0.4.3"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.5"
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
