[project]
name = "home-ops"
version = "0.1.0"
description = "Homelab as Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
authors = [{ name = "Oliver Tosky", email = "olivertosky@gmail.com" }]

[tool.uv]
dev-dependencies = ["mkdocs>=1.6.1", "mkdocs-material>=9.5.43", "ruff>=0.7.2"]
